--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
         	<version>3.9.0</version>
         <scope>provided</scope>
     	</dependency>
+        <dependency>
+    		<groupId>vg.civcraft.mc.civmodcore</groupId>
+        	<artifactId>CivModCore</artifactId>
+        	<version>1.6.1</version>
+        <scope>provided</scope>
+    	</dependency>
     </dependencies>
     
      <build>
